--- a/需求.md
+++ b/需求.md
@@ -15,6 +15,7 @@
 | -------- | --------- | ------------ | ------ |
 | 潘羽    | 2018.09.03 | 根据实际创建文档 | V0.8   |
 | 潘羽    | 2018.09.03 | 根据实际修改文档识别部分 | V1.0   |
+| 潘羽    | 2018.09.06 | 增加识别部分参考 | V1.0   |
  
 
 ### 目录
@@ -95,6 +96,8 @@
  2) Swift 全功能的绘图板开发 [链接](https://blog.csdn.net/zhangao0086/article/details/43836789)
  
  3) 开发者文档帮助  [链接](https://developer.apple.com/documentation/coregraphics/cgcontext/2427134-draw)
+ 
+ 4) 图形识别  [链接](https://medium.com/breakfastcode/how-to-make-a-1-unistroke-gesture-recognizer-in-swift-91881e9c1d98)
 
 
 
