to be continued

--- a/需求.md
+++ b/需求.md
@@ -93,12 +93,13 @@
 
  1）IEEE标准
  
- 2) Swift 全功能的绘图板开发 [链接](https://blog.csdn.net/zhangao0086/article/details/43836789)
+ 2)  [Swift 全功能的绘图板开发](https://blog.csdn.net/zhangao0086/article/details/43836789)
  
- 3) 开发者文档帮助  [链接](https://developer.apple.com/documentation/coregraphics/cgcontext/2427134-draw)
+ 3)  [开发者文档帮助](https://developer.apple.com/documentation/coregraphics/cgcontext/2427134-draw)
  
- 4) 图形识别  [链接](https://medium.com/breakfastcode/how-to-make-a-1-unistroke-gesture-recognizer-in-swift-91881e9c1d98)
-
+ 4)  [图形识别](https://medium.com/breakfastcode/how-to-make-a-1-unistroke-gesture-recognizer-in-swift-91881e9c1d98)
+ 
+ 5)  [CGContext绘图](https://www.jianshu.com/p/3b964d0c66c3) 
 
 
 ### 2、 总体描述
